--- a/index.html
+++ b/index.html
@@ -531,10 +531,10 @@
                   <li><strong>Duration: - </strong>&nbsp;3 Years [8<sup>th</sup> August, 2016 to 19<sup>th</sup> August, 2016]</li>
                   <li><strong>CGPA: - </strong>&nbsp;7.7 [74.10%]</li>
                   <li><strong>Links: - </strong>&nbsp;
-                    <a href="#" target="_blank"><button class="education-link">Registration Cerificate</button></a>
-                    <a href="#" target="_blank"><button class="education-link">Admit Card</button></a>
-                    <a href="#" target="_blank"><button class="education-link">Result Card</button></a>
-                    <a href="#" target="_blank"><button class="education-link">Qulifying Degree Cerificate</button></a>
+                    <a href="pdf/Sample PDF.pdf" target="_blank"><button class="education-link">Registration Cerificate</button></a>
+                    <a href="pdf/Sample PDF.pdf" target="_blank"><button class="education-link">Admit Card</button></a>
+                    <a href="pdf/Sample PDF.pdf" target="_blank"><button class="education-link">Result Card</button></a>
+                    <a href="pdf/Sample PDF.pdf" target="_blank"><button class="education-link">Qulifying Degree Cerificate</button></a>
                   </li>
                 </ul>
               </div><!--===END-Diploma===-->
@@ -561,10 +561,10 @@
                   <li><strong>Duration: - </strong>&nbsp;1 Year [8<sup>th</sup> March, 2012 to 19<sup>th</sup> March, 2013]</li>
                   <li><strong>CGPA: - </strong>&nbsp;55%</li>
                   <li><strong>Links: - </strong>&nbsp;
-                    <a href="#" target="_blank"><button class="education-link">Registration Cerificate</button></a>
-                    <a href="#" target="_blank"><button class="education-link">Admit Card</button></a>
-                    <a href="#" target="_blank"><button class="education-link">Result Card</button></a>
-                    <a href="#" target="_blank"><button class="education-link">Qulifying Degree Cerificate</button></a>
+                    <a href="pdf/Sample PDF.pdf" target="_blank"><button class="education-link">Registration Cerificate</button></a>
+                    <a href="pdf/Sample PDF.pdf" target="_blank"><button class="education-link">Admit Card</button></a>
+                    <a href="pdf/Sample PDF.pdf" target="_blank"><button class="education-link">Result Card</button></a>
+                    <a href="pdf/Sample PDF.pdf" target="_blank"><button class="education-link">Qulifying Degree Cerificate</button></a>
                   </li>
                 </ul>
               </div><!--===END-12th-Details===-->
@@ -591,10 +591,10 @@
                   <li><strong>Duration: - </strong>&nbsp;1 Year [8<sup>th</sup> August, 2010 to 19<sup>th</sup> March, 2011]</li>
                   <li><strong>CGPA: - </strong>&nbsp;63%</li>
                   <li><strong>Links: - </strong>&nbsp;
-                    <a href="#" target="_blank"><button class="education-link">Registration Cerificate</button></a>
-                    <a href="#" target="_blank"><button class="education-link">Admit Card</button></a>
-                    <a href="#" target="_blank"><button class="education-link">Result Card</button></a>
-                    <a href="#" target="_blank"><button class="education-link">Qulifying Degree Cerificate</button></a>
+                    <a href="pdf/Sample PDF.pdf" target="_blank"><button class="education-link">Registration Cerificate</button></a>
+                    <a href="pdf/Sample PDF.pdf" target="_blank"><button class="education-link">Admit Card</button></a>
+                    <a href="pdf/Sample PDF.pdf" target="_blank"><button class="education-link">Result Card</button></a>
+                    <a href="pdf/Sample PDF.pdf" target="_blank"><button class="education-link">Qulifying Degree Cerificate</button></a>
                   </li>
                 </ul>
               </div><!--===END-10th-Details===-->
