--- a/index.html
+++ b/index.html
@@ -449,13 +449,13 @@
                   </li>
                   <li><strong>Institute: - </strong>
                     <a href="https://jadavpuruniversity.in/academics/school-of-mobile-computing-and-communication/" target="_blank">
-                      <img src="image/logo/ju-logo.webp" alt="ju-logo" srcset="" height="50" width="50">&nbsp;
+                      <img src="image/logo/ju-logo.jpg" alt="ju-logo" srcset="" height="50" width="50">&nbsp;
                       <em>Jadavpur University</em>
                     </a>
                   </li>
                   <li><strong>University: - </strong>
                     <a href="https://jadavpuruniversity.in/academics/school-of-mobile-computing-and-communication/" target="_blank">
-                      <img src="image/logo/ju-logo.webp" alt="ju-logo" srcset="" height="50" width="50">&nbsp;
+                      <img src="image/logo/ju-logo.jpg" alt="ju-logo" srcset="" height="50" width="50">&nbsp;
                       <em>Jadavpur University</em>
                     </a>
                   </li>
@@ -483,13 +483,13 @@
                   </li>
                   <li><strong>Institute: - </strong>
                     <a href="https://stcet.ac.in/" target="_blank">
-                      <img src="image/logo/stcet-logo.png" alt="stcet-logo" srcset="" height="50" width="50">&nbsp;
+                      <img src="image/logo/stcet-logo.jpg" alt="stcet-logo" srcset="" height="50" width="50">&nbsp;
                       <em>St. Thomas' College of Engineering & Technology</em>
                     </a>
                   </li>
                   <li><strong>University: - </strong>
                     <a href="https://www.makautexam.net/" target="_blank">
-                      <img src="image/logo/makaut-logo.png" alt="makaut-logo" srcset="" height="50" width="50">&nbsp;
+                      <img src="image/logo/makaut-logo.jpg" alt="makaut-logo" srcset="" height="50" width="50">&nbsp;
                       <em>Maulana Abul Kalam Azad University of Technology</em>
                     </a>
                   </li>
@@ -517,7 +517,7 @@
                   </li>
                   <li><strong>Institute: - </strong>
                     <a href="https://www.techniqueedu.com/" target="_blank">
-                      <img src="image/logo/tpi-logo.jpeg" alt="tpi-logo" srcset="" height="50" width="50">&nbsp;
+                      <img src="image/logo/tpi-logo.jpg" alt="tpi-logo" srcset="" height="50" width="50">&nbsp;
                       <em>Technique Polytechnic Institute</em>
                     </a>
                   </li>
@@ -547,13 +547,13 @@
                   <li><strong>Course: - </strong>&nbsp;Bengali, English, Math, Physics, Chemistry, Biological Science, Enveiromental Science</li>
                   <li><strong>Institute: - </strong>
                     <a href="https://www.facebook.com/ChildrensOwnHome/" target="_blank">
-                      <img src="image/logo/ucoh-logo.jpeg" alt="ucoh-logo" srcset="" height="50" width="50">&nbsp;
+                      <img src="image/logo/ucoh-logo.jpg" alt="ucoh-logo" srcset="" height="50" width="50">&nbsp;
                       <em>Uttarpara Childrens' Own Home</em>
                     </a>
                   </li>
                   <li><strong>University: - </strong>
                     <a href="https://wbchse.wb.gov.in/" target="_blank">
-                      <img src="image/logo/wbchse-logo.png" alt="wbchse-logo" srcset="" height="50" width="50">&nbsp;
+                      <img src="image/logo/wbchse-logo.jpg" alt="wbchse-logo" srcset="" height="50" width="50">&nbsp;
                       <em>West Bengal Council of Higher Secondary Education</em>
                     </a>
                   </li>
@@ -577,13 +577,13 @@
                   <li><strong>Course: - </strong>&nbsp;Bengali, English, Math, Physical Science, Life Science, History, Geography</li>
                   <li><strong>Institute: - </strong>
                     <a href="https://www.uttarparaamarendra.in/" target="_blank">
-                      <img src="image/logo/uav-logo.jpeg" alt="uav-logo" srcset="" height="50" width="50">&nbsp;
+                      <img src="image/logo/uav-logo.jpg" alt="uav-logo" srcset="" height="50" width="50">&nbsp;
                       <em>Uttarpara Amarendra Vidyapith</em>
                     </a>
                   </li>
                   <li><strong>University: - </strong>
                     <a href="https://wbbse.wb.gov.in/" target="_blank">
-                      <img src="image/logo/wbbse-logo.png" alt="wbbse-logo" srcset="" height="50" width="50">&nbsp;
+                      <img src="image/logo/wbbse-logo.jpg" alt="wbbse-logo" srcset="" height="50" width="50">&nbsp;
                       <em>West Bengal Board of Secondary Education</em>
                     </a>
                   </li>
