--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <!--===START-Navigation-Pane===-->
         <nav id="navbar" class="nav-menu navbar">
           <ul>
-            <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+            <li><a href="#home" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
             <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
             <li><a href="#experiences" class="nav-link scrollto"><i class="bx bx-briefcase"></i> <span>Experiences</span></a></li>
             <li><a href="#education" class="nav-link scrollto"><i class='bx bxs-graduation'></i> <span>Education</span></a></li>
@@ -79,13 +79,13 @@
         </nav><!--===END-Navigation-Pane===-->
       </div>
     </header><!--===END-Header===-->
-    <!--===SATRT-Hero-Section===-->
-    <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-      <div class="hero-container" data-aos="fade-in">
+    <!--===SATRT-Home-Section===-->
+    <section id="home" class="d-flex flex-column justify-content-center align-items-center">
+      <div class="home-container" data-aos="fade-in">
         <h1>Sandip Karmakar</h1>
         <p>I'm <span class="typed" data-typed-items="M.Tech in DMC, B.Tech in ETCE, Diploma in ETCE"></span></p>
       </div>
-    </section><!--===END-Hero-Section===-->
+    </section><!--===END-Home-Section===-->
     <!--===START-Main-Content===-->
     <main id="main">
       <!--===START-About-Section===-->
