--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
           <div class="row">
             <div class="col-3" data-aos="fade-right">
               <img src="image/profile-photo.jpg" class="img-fluid" alt="image-of-sandip-karmakar">
-              <a href="pdf/sandip-karmakar-resume.pdf" target="_blank">
+              <!--<a href="pdf/sandip-karmakar-resume.pdf" target="_blank">
                 <button class="custom-btn btn-5"><span>Read More</span></button>
-              </a>
+              </a>-->
             </div>
             <div class="col-9 pt-4 pt-lg-0 content" data-aos="fade-left">
               <h3>Basic Details: -</h3>
