--- a/index.html
+++ b/index.html
@@ -427,13 +427,13 @@
                     </a>
                   </li>
                   <li><strong>Institute: - &nbsp;</strong>
-                    <a href="https://jadavpuruniversity.in/academics/school-of-mobile-computing-and-communication/" target="_blank">
+                    <a href="https://jadavpuruniversity.in/" target="_blank">
                       <img src="image/logo/ju-logo.jpg" alt="ju-logo" srcset="" height="50" width="50">&nbsp;
                       <em>Jadavpur University</em>
                     </a>
                   </li>
                   <li><strong>University: - &nbsp;</strong>
-                    <a href="https://jadavpuruniversity.in/academics/school-of-mobile-computing-and-communication/" target="_blank">
+                    <a href="https://jadavpuruniversity.in/" target="_blank">
                       <img src="image/logo/ju-logo.jpg" alt="ju-logo" srcset="" height="50" width="50">&nbsp;
                       <em>Jadavpur University</em>
                     </a>
