--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
           <img src="image/profile-photo.jpg" alt="sandip-karmakar-image" class="img-fluid rounded-circle">
           <h1 class="text-light"><a href="index.html">Sandip Karmakar</a></h1>
           <div class="social-links mt-3 text-center">
-            <a href="https://www.linkedin.com/in/sandip-karmakar-a0239692" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-            <a href="https://join.skype.com/invite/xlvrm1hJt7t4" class="skype"><i class="bx bxl-skype"></i></a>
-            <a href="https://github.com/rony-1307" class="github"><i class="bx bxl-github"></i></a>
+            <a href="https://www.linkedin.com/in/sandip-karmakar-a0239692" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
+            <a href="https://join.skype.com/invite/xlvrm1hJt7t4" class="skype" target="_blank"><i class="bx bxl-skype"></i></a>
+            <a href="https://github.com/rony-1307" class="github" target="_blank"><i class="bx bxl-github"></i></a>
           </div>
         </div><!--===END-Profile-Photo-Name-Social-Links===-->
         <!--===START-Navigation-Pane===-->
