--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="container">
           <div class="section-title">
             <h2>Professional Experience</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolor vel earum quas. Architecto aut impedit in ad eum animi soluta molestiae voluptatibus ea quos illo, assumenda nulla exercitationem neque?</p>
+            <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolor vel earum quas. Architecto aut impedit in ad eum animi soluta molestiae voluptatibus ea quos illo, assumenda nulla exercitationem neque?</p>-->
           </div>
           <div class="row">
             <!--===START-Academic-Experiences===-->
@@ -440,7 +440,7 @@
                   </li>
                   <li><strong>Passing Year: - &nbsp;</strong>2025</li>
                   <li><strong>Duration: -&nbsp;</strong>2 years [2<sup>nd</sup> August, 2023 - Present]</li>
-                  <li><strong>CGPA: -&nbsp;</strong>7.12 [63.70%]</li>
+                  <li><strong>CGPA: -&nbsp;</strong>7.12 [63.70%] (Upto 1<sup>st</sup> Semtember)</li>
                   <!--<li><strong>Documents: -&nbsp;</strong>
                     <a href="pdf/Sample PDF.pdf" target="_blank"><button class="education-link">Registration Cerificate</button></a>
                     <a href="pdf/Sample PDF.pdf" target="_blank"><button class="education-link">Admit Card</button></a>
@@ -587,7 +587,7 @@
         <div class="container">
           <div class="section-title">
             <h2>Projects</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam mollitia architecto adipisci facilis iste excepturi eligendi esse? Rem saepe, dolore repudiandae error pariatur, corrupti, ad illum repellat veritatis ipsum laborum?</p>
+            <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam mollitia architecto adipisci facilis iste excepturi eligendi esse? Rem saepe, dolore repudiandae error pariatur, corrupti, ad illum repellat veritatis ipsum laborum?</p>-->
           </div>
           <div class="row">
             <div class="col-lg-12" data-aos="fade-up" data-aos-delay="100">
@@ -693,7 +693,7 @@
         <div class="container">
           <div class="section-title">
             <h2>Activities</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur beatae, quibusdam tempore cupiditate voluptatum vitae soluta eum rerum iste quod ducimus nostrum numquam pariatur eos animi ab dolores molestias? Repudiandae?</p>
+            <!--<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur beatae, quibusdam tempore cupiditate voluptatum vitae soluta eum rerum iste quod ducimus nostrum numquam pariatur eos animi ab dolores molestias? Repudiandae?</p>-->
           </div>
           <div class="row">
             <!--===START-PAPER-PUBLICATION-DETAILS===-->
