--- a/index.html
+++ b/index.html
@@ -139,14 +139,14 @@
       </section><!--===END-About-Section===-->
       <!--===START-Experiences-Section===-->
       <section id="experiences" class="resume">
-        <!--===START-Industrial-&-Academic-Experiences-Section===-->
+        <!--===START-Experiences-Section===-->
         <div class="container">
           <div class="section-title">
             <h2>Professional Experience</h2>
             <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente dolor vel earum quas. Architecto aut impedit in ad eum animi soluta molestiae voluptatibus ea quos illo, assumenda nulla exercitationem neque?</p>-->
           </div>
           <div class="row">
-            <!--===START-Academic-Experiences===-->
+            <!--===START-Experiences===-->
             <div class="col-lg-12" data-aos="fade-up" data-aos-delay="100">
               <!--===START-1st-Eperience===-->
               <div class="resume-item">
@@ -172,7 +172,7 @@
               </div><!--===END-1st-Industrial-Eperience===-->
             </div><!--===END-Academic-Experiences===-->
           </div>
-        </div><!--===END-Industrial-&-Academic-Experiences-Section===-->
+        </div><!--===END-Experiences-Section===-->
         <!--===START-Skills===-->
         <div class="skills container">
           <div class="section-title">
@@ -329,7 +329,7 @@
                 <p><a href="https://sandeepani-training.com/" target="_blank"><img src="image/logo/sandeepani-school-of-embedded-system-design-logo.jpg" alt="sandeepani-school-of-embedded-system-design-logo" srcset="" height="50" width="50">&nbsp;&nbsp;&nbsp;
                   <em>
                     <span>
-                      &nbsp;&nbsp;Sandeepani School of Embedded System Design</a> | Chandan Nagar, Hooghly, West Bengaly
+                      &nbsp;&nbsp;Sandeepani School of Embedded System Design</a> | Koramangala, Bangalore, Karnataka
                     </span>
                   </em>
                 </p>
