--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@
         <div class="container">
           <div class="section-title">
             <h2>Contact</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero laboriosam eaque, molestias adipisci excepturi accusantium officia reprehenderit earum minima ut beatae nostrum cupiditate eveniet iusto expedita tenetur nihil in inventore.</p>
+            <!--<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero laboriosam eaque, molestias adipisci excepturi accusantium officia reprehenderit earum minima ut beatae nostrum cupiditate eveniet iusto expedita tenetur nihil in inventore.</p>-->
           </div>
           <!--==START-Contact-Information===-->
           <div class="row" data-aos="fade-in">
@@ -858,7 +858,7 @@
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
-                  <p><a href="https://maps.app.goo.gl/pji8au2vXBwE4p997">77/42 Rammohan Place, PO: - Konnagar, PS:- Uttarpara, Dist:- Hooghly, State:- West Bengal, PIN:- 712235 (IN)</a></p>
+                  <p><a href="https://maps.app.goo.gl/pji8au2vXBwE4p997">Konnagar, Hooghly, West Bengal, (IN)</a></p>
                 </div>
                 <div class="email">
                   <i class="bi bi-envelope"></i>
